--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
     <title>お問い合わせ | MIRAINA - AI導入支援・研修・開発</title>
     <meta name="description" content="MIRAINAへのお問い合わせページです。生成AI導入支援、研修、カスタムAI開発に関するご相談を受け付けております。">
     <meta name="keywords" content="お問い合わせ,AI導入相談,生成AI,AI開発,企業支援">
-    <link rel="icon" href="/new-app/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/new-app/images/apple-touch-icon.png">
-    <link rel="stylesheet" href="/new-app/css/reset.css">
-    <link rel="stylesheet" href="/new-app/css/common.css">
-    <link rel="stylesheet" href="/new-app/css/contact.css">
+    <link rel="icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/contact.css">
     <link rel="preload" href="/new-app/fonts/main-font.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
@@ -21,8 +21,8 @@
             <h1 class="site-logo"><a href="/new-app/index.html">MIRAINA</a></h1>
             <nav class="global-nav">
                 <ul>
-                    <li><a href="/new-app/services.html" class="nav-link">サービス</a></li>
-                    <li><a href="/new-app/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
+                    <li><a href="/services.html" class="nav-link">サービス</a></li>
+                    <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
             </nav>
             <div class="hamburger-menu">
@@ -34,8 +34,8 @@
     </header>
     <nav class="mobile-nav">
         <ul>
-            <li><a href="/new-app/services.html">サービス</a></li>
-            <li><a href="/new-app/contact.html">お問い合わせ</a></li>
+            <li><a href="/services.html">サービス</a></li>
+            <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
     </nav>
     <main>
@@ -60,8 +60,8 @@
             </div>
             <div class="footer-nav">
                 <ul>
-                    <li><a href="/new-app/services.html">サービス</a></li>
-                    <li><a href="/new-app/contact.html">お問い合わせ</a></li>
+                    <li><a href="/services.html">サービス</a></li>
+                    <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
                 </ul>
             </div>
