--- a/services.html
+++ b/services.html
@@ -12,13 +12,13 @@
     <meta property="og:description" content="MIRAINAは中小企業向けに最適な生成AI導入支援、AIトレーニング、カスタムAI開発サービスを提供しています。貴社のビジネスに合わせたAIソリューションで業務効率化と競争力向上を実現します。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://miraina.jp/services">
-    <meta property="og:image" content="/new-app/images/og-services.jpg">
+    <meta property="og:image" content="/images/og-services.jpg">
     <meta property="og:site_name" content="MIRAINA">
-    <link rel="icon" href="/new-app/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/new-app/images/apple-touch-icon.png">
-    <link rel="stylesheet" href="/new-app/css/reset.css">
-    <link rel="stylesheet" href="/new-app/css/common.css">
-    <link rel="stylesheet" href="/new-app/css/services.css">
+    <link rel="icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/services.css">
     <link rel="preload" href="/new-app/fonts/main-font.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
@@ -27,8 +27,8 @@
             <h1 class="site-logo"><a href="/new-app/index.html">MIRAINA</a></h1>
             <nav class="global-nav">
                 <ul>
-                    <li><a href="/new-app/services.html" class="nav-link">サービス</a></li>
-                    <li><a href="/new-app/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
+                    <li><a href="/services.html" class="nav-link">サービス</a></li>
+                    <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
             </nav>
             <div class="hamburger-menu">
@@ -40,8 +40,8 @@
     </header>
     <nav class="mobile-nav">
         <ul>
-            <li><a href="/new-app/services.html">サービス</a></li>
-            <li><a href="/new-app/contact.html">お問い合わせ</a></li>
+            <li><a href="/services.html">サービス</a></li>
+            <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
     </nav>
     <main class="services-page">
@@ -69,21 +69,21 @@
                 <div class="service-categories">
                     <div class="category-item">
                         <div class="category-icon">
-                            <img src="/new-app/images/strategic_ai_implementation_service.png" alt="AI導入コンサルティングアイコン">
+                            <img src="/images/strategic_ai_implementation_service.png" alt="AI導入コンサルティングアイコン">
                         </div>
                         <h3>戦略的生成AI導入</h3>
                         <p>貴社の業務課題に最適なAI導入戦略を提案します。</p>
                     </div>
                     <div class="category-item">
                         <div class="category-icon">
-                            <img src="/new-app/images/ai_training_service.png" alt="AI研修アイコン">
+                            <img src="/images/ai_training_service.png" alt="AI研修アイコン">
                         </div>
                         <h3>AI人材育成研修</h3>
                         <p>社員のAIリテラシー向上と実践的な活用スキルを育成します。</p>
                     </div>
                     <div class="category-item">
                         <div class="category-icon">
-                            <img src="/new-app/images/original_ai_solution.png" alt="AI開発アイコン">
+                            <img src="/images/original_ai_solution.png" alt="AI開発アイコン">
                         </div>
                         <h3>AIチャットボット開発</h3>
                         <p>貴社独自の業務に特化したAIチャットボットを開発します。</p>
@@ -109,7 +109,7 @@
                         </ul>
                     </div>
                     <div class="service-image">
-                        <img src="/new-app/images/strategic_ai_implementation_service.png" alt="戦略的AI導入サービスのイメージ">
+                        <img src="/images/strategic_ai_implementation_service.png" alt="戦略的AI導入サービスのイメージ">
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                         </ul>
                     </div>
                     <div class="service-image">
-                        <img src="/new-app/images/ai_training_service.png" alt="AI活用研修サービスのイメージ">
+                        <img src="/images/ai_training_service.png" alt="AI活用研修サービスのイメージ">
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                         </ul>
                     </div>
                     <div class="service-image">
-                        <img src="/new-app/images/original_ai_solution.png" alt="AIチャットボット開発サービス">
+                        <img src="/images/original_ai_solution.png" alt="AIチャットボット開発サービス">
                     </div>
                 </div>
             </div>
@@ -219,8 +219,8 @@
             </div>
             <div class="footer-nav">
                 <ul>
-                    <li><a href="/new-app/services.html">サービス</a></li>
-                    <li><a href="/new-app/contact.html">お問い合わせ</a></li>
+                    <li><a href="/services.html">サービス</a></li>
+                    <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
                 </ul>
             </div>
