--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <meta property="og:description" content="MIRAINAは、生成AI導入支援・研修・AI開発事業を展開する企業です。中小企業の未来を創造するAIソリューションを提供します。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://miraina.co.jp">
-    <meta property="og:image" content="/new-app/images/ogp.jpg">
+    <meta property="og:image" content="/images/ogp.jpg">
     <meta property="og:site_name" content="MIRAINA">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="MIRAINA | 生成AI導入支援・研修・AI開発事業">
     <meta name="twitter:description" content="MIRAINAは、生成AI導入支援・研修・AI開発事業を展開する企業です。中小企業の未来を創造するAIソリューションを提供します。">
-    <meta name="twitter:image" content="/new-app/images/ogp.jpg">
-    <link rel="icon" href="/new-app/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/new-app/images/apple-touch-icon.png">
-    <link rel="stylesheet" href="/new-app/css/reset.css">
-    <link rel="stylesheet" href="/new-app/css/common.css">
-    <link rel="stylesheet" href="/new-app/css/index.css">
+    <meta name="twitter:image" content="/images/ogp.jpg">
+    <link rel="icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="preload" href="/new-app/fonts/main-font.woff2" as="font" type="font/woff2" crossorigin>
     <script type="application/ld+json">
     {
@@ -32,7 +32,7 @@
         "@type": "Organization",
         "name": "MIRAINA",
         "url": "https://miraina.co.jp",
-        "logo": "https://miraina.co.jp/new-app/images/logo.png",
+        "logo": "https://miraina.co.jp/images/logo.png",
         "sameAs": [
             "https://twitter.com/miraina_ai",
             "https://www.linkedin.com/company/miraina-ai"
@@ -61,11 +61,11 @@
 <body>
     <header class="site-header">
         <div class="header-container">
-            <h1 class="site-logo"><a href="/new-app/index.html">MIRAINA</a></h1>
+            <h1 class="site-logo"><a href="/index.html">MIRAINA</a></h1>
             <nav class="global-nav">
                 <ul>
-                    <li><a href="/new-app/services.html" class="nav-link">サービス</a></li>
-                    <li><a href="/new-app/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
+                    <li><a href="/services.html" class="nav-link">サービス</a></li>
+                    <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
             </nav>
             <div class="hamburger-menu">
@@ -77,8 +77,8 @@
     </header>
     <nav class="mobile-nav">
         <ul>
-            <li><a href="/new-app/services.html">サービス</a></li>
-            <li><a href="/new-app/contact.html">お問い合わせ</a></li>
+            <li><a href="/services.html">サービス</a></li>
+            <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
     </nav>
     <main>
@@ -89,7 +89,7 @@
                 <h2 class="hero-title">AIが創る<br>新時代の業務のカタチ</h2>
                 <p class="hero-subtitle">中小企業に特化した生成AI導入支援から<br>AI開発・AI人材育成まで、あなたのビジネスを革新します</p>
                 <div class="hero-cta">
-                    <a href="/new-app/contact.html" class="cta-button">導入相談をする</a>
+                    <a href="/contact.html" class="cta-button">導入相談をする</a>
                 </div>
             </div>
         </section>
@@ -131,7 +131,7 @@
                         </ul>
                     </div>
                     <div class="contact-button-container">
-                        <a href="/new-app/contact.html" class="contact-button">お問い合わせフォームへ</a>
+                        <a href="/contact.html" class="contact-button">お問い合わせフォームへ</a>
                     </div>
                 </div>
             </div>
@@ -144,8 +144,8 @@
             </div>
             <div class="footer-nav">
                 <ul>
-                    <li><a href="/new-app/services.html">サービス</a></li>
-                    <li><a href="/new-app/contact.html">お問い合わせ</a></li>
+                    <li><a href="/services.html">サービス</a></li>
+                    <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
                 </ul>
             </div>
