--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
     <header class="site-header">
         <div class="header-container">
-            <h1 class="site-logo"><a href="/new-app/index.html">MIRAINA</a></h1>
+            <h1 class="site-logo"><a href="/index.html">MIRAINA</a></h1>
             <nav class="global-nav">
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
@@ -56,7 +56,7 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="footer-logo">
-                <a href="/new-app/index.html">MIRAINA</a>
+                <a href="/index.html">MIRAINA</a>
             </div>
             <div class="footer-nav">
                 <ul>
@@ -70,6 +70,6 @@
             </div>
         </div>
     </footer>
-    <script src="/new-app/js/common.js" defer></script>
+    <script src="/js/common.js" defer></script>
 </body>
 </html> 
