--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="footer-logo">
-                <a href="/new-app/index.html">MIRAINA</a>
+                <a href="/index.html">MIRAINA</a>
             </div>
             <div class="footer-nav">
                 <ul>
@@ -154,8 +154,8 @@
             </div>
         </div>
     </footer>
-    <script src="/new-app/js/common.js" defer></script>
-    <script src="/new-app/js/hero-animation.js" defer></script>
-    <script src="/new-app/js/index.js" defer></script>
+    <script src="/js/common.js" defer></script>
+    <script src="/js/hero-animation.js" defer></script>
+    <script src="/js/index.js" defer></script>
 </body>
 </html> 
