--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
 <body>
     <header class="site-header">
         <div class="header-container">
-            <h1 class="site-logo"><a href="/new-app/index.html">MIRAINA</a></h1>
+            <h1 class="site-logo"><a href="/index.html">MIRAINA</a></h1>
             <nav class="global-nav">
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
@@ -54,7 +54,7 @@
         <div class="breadcrumb">
             <div class="container">
                 <ul>
-                    <li><a href="/new-app/index.html">ホーム</a></li>
+                    <li><a href="/index.html">ホーム</a></li>
                     <li>サービス</li>
                 </ul>
             </div>
@@ -215,7 +215,7 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="footer-logo">
-                <a href="/new-app/index.html">MIRAINA</a>
+                <a href="/index.html">MIRAINA</a>
             </div>
             <div class="footer-nav">
                 <ul>
@@ -229,7 +229,7 @@
             </div>
         </div>
     </footer>
-    <script src="/new-app/js/common.js" defer></script>
-    <script src="/new-app/js/services.js" defer></script>
+    <script src="/js/common.js" defer></script>
+    <script src="/js/services.js" defer></script>
 </body>
 </html> 
