delete hero-animation.js from index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
     </footer>
     <script src="/js/common.js" defer></script>
-    <script src="/js/hero-animation.js" defer></script>
+    <!-- <script src="/js/hero-animation.js" defer></script> -->
     <script src="/js/index.js" defer></script>
 </body>
 </html> 
