--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="MIRAINA | 生成AI導入支援・研修・AI開発事業">
     <meta property="og:description" content="MIRAINAは、生成AI導入支援・研修・AI開発事業を展開する企業です。中小企業の未来を創造するAIソリューションを提供します。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://miraina.co.jp">
+    <meta property="og:url" content="https://miraina-ai.com">
     <meta property="og:image" content="/images/ogp.jpg">
     <meta property="og:site_name" content="MIRAINA">
     <!-- Twitter Card -->
@@ -31,8 +31,8 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "MIRAINA",
-        "url": "https://miraina.co.jp",
-        "logo": "https://miraina.co.jp/images/logo.png",
+        "url": "https://miraina-ai.com",
+        "logo": "https://miraina-ai.com/images/logo.png",
         "sameAs": [
             "https://twitter.com/miraina_ai",
             "https://www.linkedin.com/company/miraina-ai"
