--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="サービス | MIRAINA - 生成AI導入支援・研修・AI開発">
     <meta property="og:description" content="MIRAINAは中小企業向けに最適な生成AI導入支援、AIトレーニング、カスタムAI開発サービスを提供しています。貴社のビジネスに合わせたAIソリューションで業務効率化と競争力向上を実現します。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://miraina.jp/services">
+    <meta property="og:url" content="https://miraina-ai.com/services">
     <meta property="og:image" content="/images/og-services.jpg">
     <meta property="og:site_name" content="MIRAINA">
     <link rel="icon" href="/images/favicon.ico">
