--- a/services.html
+++ b/services.html
@@ -24,10 +24,13 @@
 <body>
     <header class="site-header">
         <div class="header-container">
-            <h1 class="site-logo"><a href="/index.html">MIRAINA</a></h1>
+            <h1 class="site-logo"><a href="/index.html"><img src="/images/company-logo.png" alt="MIRAINAロゴ" class="logo-img"></a></h1>
             <nav class="global-nav">
                 <ul>
                     <li><a href="/services.html" class="nav-link">サービス</a></li>
+                    <li><a href="/about.html" class="nav-link">会社情報</a></li>
+                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
                     <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
             </nav>
@@ -41,6 +44,9 @@
     <nav class="mobile-nav">
         <ul>
             <li><a href="/services.html">サービス</a></li>
+            <li><a href="/about.html">会社情報</a></li>
+            <li><a href="/works.html">実績</a></li>
+            <li><a href="/blogs.html">ブログ</a></li>
             <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
     </nav>
@@ -220,6 +226,9 @@
             <div class="footer-nav">
                 <ul>
                     <li><a href="/services.html">サービス</a></li>
+                    <li><a href="/about.html">会社情報</a></li>
+                    <li><a href="/works.html">実績</a></li>
+                    <li><a href="/blogs.html">ブログ</a></li>
                     <li><a href="/contact.html">お問い合わせ</a></li>
                     <li><a href="https://www.notion.so/1cbc499245c180c19d13d1674064825e?pvs=4">プライバシーポリシー</a></li>
                 </ul>
