--- a/about.html
+++ b/about.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="MIRAINA">
-    <meta name="robots" content="index, follow">
-    <title>お問い合わせ | MIRAINA - AI導入支援・研修・開発</title>
-    <meta name="description" content="MIRAINAへのお問い合わせページです。生成AI導入支援、研修、カスタムAI開発に関するご相談を受け付けております。">
-    <meta name="keywords" content="お問い合わせ,AI導入相談,生成AI,AI開発,企業支援">
+    <title>About Us | MIRAINA</title>
+    <meta name="description" content="MIRAINAの会社概要・ビジョン・メンバー紹介ページ。生成AI導入支援・AI開発・AI人材育成を通じて中小企業の未来を創造します。">
     <link rel="icon" href="/images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/contact.css">
-    <link rel="preload" href="/new-app/fonts/main-font.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <header class="site-header">
@@ -45,17 +42,32 @@
         </ul>
     </nav>
     <main>
-        <section class="contact-hero">
-            <div class="container">
-                <h1 class="contact-title">お問い合わせ</h1>
-                <p class="contact-subtitle">AI導入に関するご相談はお気軽にどうぞ<br>※フォーム読み込みに時間がかかることがあります。</p>
+        <section class="about-section container" style="margin-top: 120px; margin-bottom: 80px;">
+            <div class="section-header">
+                <h2 class="section-title">About Us</h2>
+                <p class="section-description">MIRAINAについて</p>
             </div>
-        </section>
-        <section class="contact-form-section">
-            <div class="container">
-                <div class="form-wrapper">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUdB2fIaNFlN_SLC7gHDq8b750HAM5WeAoyVZThH28itoAAg/viewform?embedded=true" width="100%" height="1452" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-                </div>
+            <div class="about-content" style="max-width: 800px; margin: 0 auto;">
+                <h3 style="font-size: 2rem; margin-bottom: 1rem;">ビジョン</h3>
+                <p style="margin-bottom: 2rem;">MIRAINAは「AIで中小企業の未来を創造する」をミッションに掲げ、生成AI導入支援・AI開発・AI人材育成を通じて、企業の成長と社会の発展に貢献します。</p>
+                <h3 style="font-size: 2rem; margin-bottom: 1rem;">事業内容</h3>
+                <ul style="margin-bottom: 2rem; padding-left: 1.5rem;">
+                    <li>・生成AI導入コンサルティング</li>
+                    <li>・AIシステム・チャットボット開発</li>
+                    <li>・AI人材育成・研修</li>
+                </ul>
+                <h3 style="font-size: 2rem; margin-bottom: 1rem;">会社概要</h3>
+                <table style="width:100%; max-width:500px; margin-bottom:2rem;">
+                    <tr><th style="text-align:left; width:120px;">会社名</th><td>MIRAINA株式会社</td></tr>
+                    <tr><th style="text-align:left;">設立</th><td>2024年4月</td></tr>
+                    <tr><th style="text-align:left;">代表</th><td>柴 雄作</td></tr>
+                    <tr><th style="text-align:left;">所在地</th><td>東京都渋谷区</td></tr>
+                </table>
+                <h3 style="font-size: 2rem; margin-bottom: 1rem;">メンバー紹介</h3>
+                <ul style="margin-bottom: 2rem; padding-left: 1.5rem;">
+                    <li>・柴 雄作（代表/AIコンサルタント）</li>
+                    <li>・他、AIエンジニア・デザイナー・研修講師など多数在籍</li>
+                </ul>
             </div>
         </section>
     </main>
