--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </section>
         <!-- Works Section -->
-        <section class="works-section" id="works">
+        <!-- <section class="works-section" id="works">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">実績</h2>
@@ -166,7 +166,7 @@
                     <a href="/works.html" class="more-link">AI導入による業務効率化事例一覧を見る</a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Blog Section -->
        <section class="blog-section" id="blog">
