--- a/works.html
+++ b/works.html
@@ -30,8 +30,11 @@
             <h1 class="site-logo"><a href="/index.html"><img src="/images/company-logo.png" alt="MIRAINAロゴ" class="logo-img"></a></h1>
             <nav class="global-nav">
                 <ul>
-                    <li><a href="./services.html" class="nav-link">サービス</a></li>
-                    <li><a href="./contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
+                    <li><a href="/services.html" class="nav-link">サービス</a></li>
+                    <li><a href="/about.html" class="nav-link">会社情報</a></li>
+                    <li><a href="/works.html" class="nav-link">実績</a></li>
+                    <li><a href="/blogs.html" class="nav-link">ブログ</a></li>
+                    <li><a href="/contact.html" class="nav-link contact-btn">お問い合わせ</a></li>
                 </ul>
             </nav>
             <div class="hamburger-menu">
@@ -43,8 +46,11 @@
     </header>
     <nav class="mobile-nav">
         <ul>
-            <li><a href="./services.html">サービス</a></li>
-            <li><a href="./contact.html">お問い合わせ</a></li>
+            <li><a href="/services.html">サービス</a></li>
+            <li><a href="/about.html">会社情報</a></li>
+            <li><a href="/works.html">実績</a></li>
+            <li><a href="/blogs.html">ブログ</a></li>
+            <li><a href="/contact.html">お問い合わせ</a></li>
         </ul>
     </nav>
     <main>
