--- a/works.html
+++ b/works.html
@@ -66,7 +66,7 @@
             </div>
         </section>
 
-        <section class="clients-section" aria-labelledby="clients-heading">
+        <!-- <section class="clients-section" aria-labelledby="clients-heading">
             <div class="container">
                 <h2 id="clients-heading" class="section-title">導入企業</h2>
                 <p class="section-description">MIRAINAは多くの企業様にサービスを提供しています</p>
@@ -208,7 +208,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer class="site-footer">
         <div class="footer-container">
