--- a/about.html
+++ b/about.html
@@ -58,15 +58,14 @@
                 </ul>
                 <h3 style="font-size: 2rem; margin-bottom: 1rem;">会社概要</h3>
                 <table style="width:100%; max-width:500px; margin-bottom:2rem;">
-                    <tr><th style="text-align:left; width:120px;">会社名</th><td>MIRAINA株式会社</td></tr>
+                    <tr><th style="text-align:left; width:120px;">会社名</th><td>MIRAINA</td></tr>
                     <tr><th style="text-align:left;">設立</th><td>2024年4月</td></tr>
-                    <tr><th style="text-align:left;">代表</th><td>柴 雄作</td></tr>
-                    <tr><th style="text-align:left;">所在地</th><td>東京都渋谷区</td></tr>
+                    <tr><th style="text-align:left;">代表</th><td>芝 優作</td></tr>
+                    <tr><th style="text-align:left;">所在地</th><td>福岡県福岡市</td></tr>
                 </table>
                 <h3 style="font-size: 2rem; margin-bottom: 1rem;">メンバー紹介</h3>
                 <ul style="margin-bottom: 2rem; padding-left: 1.5rem;">
-                    <li>・柴 雄作（代表/AIコンサルタント）</li>
-                    <li>・他、AIエンジニア・デザイナー・研修講師など多数在籍</li>
+                    <li>・芝 優作（代表/AIコンサルタント）</li>
                 </ul>
             </div>
         </section>
