--- a/blogs.html
+++ b/blogs.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="blog-grid">
+                <!-- <div class="blog-grid">
                     <div class="blog-card">
                         <a href="https://note.com/miraina/articles/example1" target="_blank" rel="noopener noreferrer" class="blog-link">
                             <div class="blog-image">
@@ -87,7 +87,6 @@
                             </div>
                         </a>
                     </div>
-                    <!-- 追加のダミー記事 -->
                     <div class="blog-card">
                         <a href="https://note.com/miraina/articles/example4" target="_blank" rel="noopener noreferrer" class="blog-link">
                             <div class="blog-image">
@@ -103,7 +102,7 @@
                 </div>
                 <div class="more-link-container">
                     <a href="https://note.com/miraina" target="_blank" rel="noopener noreferrer" class="more-link">noteで全ての記事を見る</a>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
