--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
 
             <!-- Blog Cards -->
-            <div class="container">
+            <!-- <div class="container">
                 <div class="blog-grid">
                     <div class="blog-card">
                         <a href="https://note.com/miraina/articles/example1" target="_blank" rel="noopener noreferrer" class="blog-link">
@@ -226,7 +226,7 @@
                     <a href="/blogs.html" class="more-link">AI活用コラム・最新ニュースをすべて見る</a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- Contact Section -->
